[package]
name = "exint-integer"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lints]
workspace = true

[dependencies]
exint-backend = { path = "../exint-backend", version = "=0.1.0", default-features = false }

[features]
default = []

# ------------------------------------------------------------------------------
# Features - Markers
# ------------------------------------------------------------------------------

# Marker indicating features that require a nightly compiler
nightly = []

# Marker indicating features that require the rust standard library
std = []

# Marker indicating features that require internal rust features
internal_features = ["nightly"]

# Marker indicating features that require incomplete rust features
incomplete_features = ["nightly"]

# ------------------------------------------------------------------------------
# Features - Backend
# ------------------------------------------------------------------------------

# Enable backend functionality that requires the `const_trait_impl` feature
#
# Note: This is not useful without `min_specialization`.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/67792
const_trait_impl = ["exint-backend/const_trait_impl"]

# Enable backend functionality that requires the `core_intrinsics` feature
#
# Note: This is perma-unstable in Rust.
core_intrinsics = ["exint-backend/core_intrinsics", "internal_features"]

# Enable backend functionality that requires the `min_specialization` feature
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/31844
min_specialization = ["exint-backend/min_specialization"]

# ------------------------------------------------------------------------------
# Features - Nightly
# ------------------------------------------------------------------------------

# Enable support for `adt_const_params` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/128028
adt_const_params = ["unsized_const_params"]

# Enable support for `ascii_char` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/110998
ascii_char = ["nightly"]

# Enable support for `disjoint_bitor` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/135758
disjoint_bitor = ["exint-backend/disjoint_bitor", "nightly"]

# Enable support for `f16` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/116909
f16 = ["nightly"]

# Enable support for `f128` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/116909
f128 = ["nightly"]

# Enable support for `integer_atomics` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/99069
integer_atomics = ["nightly"]

# Enable support for `never_type` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/35121
never_type = ["nightly"]

# Enable support for `random` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/130703
random = ["nightly"]

# Enable support for `step_trait` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/42168
step_trait = ["nightly"]

# Enable support for `structural_match` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/31434
structural_match = ["nightly"]

# Enable support for `trusted_step` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/85731
trusted_step = ["step_trait"]

# Enable support for `unsized_const_params` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/95174
unsized_const_params = ["incomplete_features", "structural_match"]

# ------------------------------------------------------------------------------
# Features - Unstable
# ------------------------------------------------------------------------------

# Enable support for `bigint_helper_methods` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/85532
bigint_helper_methods = ["exint-backend/bigint_helper_methods"]

# Enable support for `int_from_ascii` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/134821
int_from_ascii = []

# Enable support for `int_roundings` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/88581
int_roundings = []

# Enable support for `is_ascii_octdigit` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/101288
is_ascii_octdigit = []

# Enable support for `isolate_most_least_significant_one` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/136909
isolate_most_least_significant_one = []

# Enable support for `mixed_integer_ops_unsigned_sub` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/126043
mixed_integer_ops_unsigned_sub = []

# Enable support for `strict_overflow_ops` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/118260
strict_overflow_ops = []

# Enable support for `unchecked_neg` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/85122
unchecked_neg = []

# Enable support for `unchecked_shifts` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/85122
unchecked_shifts = []

# Enable support for `unsigned_signed_diff` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/126041
unsigned_signed_diff = []

# Enable support for `utf16_extra` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/94919
utf16_extra = []

# Enable support for `wrapping_next_power_of_two` core functionality.
#
# Tracking Issue: https://github.com/rust-lang/rust/issues/32463
wrapping_next_power_of_two = []
